@@ -1,0 +1,7 @@
+CREATE TABLE dialects (name VARCHAR(70));
+
+-- Insert some sample dialects
+INSERT INTO dialects ('name') VALUES ("Afrikaans");
+INSERT INTO dialects ('name') VALUES ("English");
+INSERT INTO dialects ('name') VALUES ("French");
+INSERT INTO dialects ('name') VALUES ("Kiswahili");
